--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <title>Frontend Mentor | Blog preview card</title>
 
   <style type="text/css">
+    @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Outfit:wght@100..900&display=swap');
     * {
       box-sizing: border-box;
     }
     body {
+      font-family: "Figtree";
       background-color: hsl(47, 88%, 63%);
     }
     .container {
@@ -29,7 +31,8 @@
       text-align: left;
       background-color: hsl(0, 0%, 100%);
       border-style: solid;
-      border-radius: 10px;
+      border-radius: 20px;
+      box-shadow: 10px 10px black;
       padding: 20px;
     }
     #illustration {
