--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       text-align: left;
       background-color: hsl(0, 0%, 100%);
       border-style: solid;
+      border-width: 1.5px;
       border-radius: 20px;
       box-shadow: 10px 10px black;
       padding: 20px;
