Added a feature to the 'HTML & CSS foundations' header within the blog-post which makes it turn yellow when hovered over. Furthermore, updated the README.md file to accurately describe my workflow and thoughts about this project.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     .paragraph {
       width: 330px;
     }
+    h2:hover {
+      color: hsl(47, 88%, 63%);
+    }
     ul {
       width: fit-content;
       display: inline-flex;
