--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       box-shadow: 10px 10px black;
       padding: 20px;
     }
-    #illustration {
+    .illustration {
       border-radius: 10px;
     }
     h4.subtitle {
@@ -73,7 +73,7 @@
 <body>
   <div class="container">
     <div class="blogPost">
-      <img id="illustration" src="assets/images/illustration-article.svg" />
+      <img class="illustration" src="assets/images/illustration-article.svg" alt="Project Illustration" />
       <h4 class="subtitle"> Learning </h4>
       <p> Published 21 Dec 2023 </p>
       <h2> HTML & CSS foundations </h2>
@@ -81,7 +81,7 @@
         These languages are the backbone of every website, defining structure, content, and presentation.
       </p>
       <ul>
-        <li><img class="avatar" src="assets/images/image-avatar.webp" /></li>
+        <li><img class="avatar" src="assets/images/image-avatar.webp" alt ="Author Face Shot" /></li>
         <li><h4> Greg Hooper </h4></li>
       </ul>
     </div>
